Add get remote server information steam
